[gd_scene load_steps=4 format=3 uid="uid://cugpi5ymx1ua8"]

[ext_resource type="Script" uid="uid://w0dsttrr8q4x" path="res://Scripts/Plants/PlantManager.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://cct4s1kegd21d" path="res://Assets/Audio/PlantPlaceClick.mp3" id="2"]
[ext_resource type="AudioStream" uid="uid://swqg421sexsx" path="res://Assets/Audio/SunCollect.mp3" id="3"]

[node name="PlantManager" type="Node2D"]
script = ExtResource("1")

[node name="PlacePlantAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2")

[node name="SunCollectPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
volume_db = -5.0

[node name="SetSun" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="timeout" from="SetSun" to="." method="_on_SetSun_timeout"]
